@@ -1,3 +1,3 @@
-100. Retriece from RIPE database and print the ISP network and network advertisers
+100. Retrieve from RIPE database and print the ISP network and network advertisers
 200. QSpeedTestCLI release
 300. Thread safe Singleton pattern for the global variables?
